@@ -21,71 +21,6 @@ from functools import wraps
 log = logging.getLogger(__name__)
 
 
-class RetryGoRound(object):
-    """Handle flaky mirrors/endpoints by trying them all.
-
-    This wraps two or more objects; if a call on the first one fails in a
-    non-fatal way, try the next one and so on until success, or until
-    we've tried all the alternatives.
-
-    This doesn't currently support backoff; combine it with RetryWrapper
-    for that.
-    """
-    def __init__(self, alternatives, retry_if):
-        """Wrap the given objects
-
-        :type alternatives: list
-        :param alternatives: the objects to wrap
-        :param retry_if: a method that takes an exception, and returns whether
-                         we should retry
-        """
-        if not alternatives:
-            raise ValueError('must provide at least one alternative')
-        self.__alternatives = tuple(alternatives)  # don't allow modifying list
-
-        self.__retry_if = retry_if
-
-        # where to start trying from
-        self.__start_index = 0
-
-    def __getattr__(self, name):
-        """The glue that makes functions retriable, and returns other
-        attributes from the wrapped object as-is."""
-        # use whichever alternative last worked as our model
-        x = getattr(self.__alternatives[self.__start_index], name)
-        if hasattr(x, '__call__'):
-            return self.__wrap_methods_with_call_and_maybe_retry(name)
-        else:
-            return x
-
-    def __wrap_methods_with_call_and_maybe_retry(self, name):
-        """Wrap calls to name()."""
-
-        def call_and_maybe_retry(*args, **kwargs):
-            n = len(self.__alternatives)
-
-            for i in range(n):
-                index = (self.__start_index + i) % n
-                alternative = self.__alternatives[index]
-
-                try:
-                    result = getattr(alternative, name)(*args, **kwargs)
-                    # this one works, start here next time!
-                    self.__start_index = index
-                    return result
-                except Exception as ex:
-                    # that one didn't work out, retry if we can
-                    if i < n - 1 and self.__retry_if(ex):
-                        log.info('%r.%s() raised %r, trying next alternative'
-                                 % (alternative, name, ex))
-                    else:
-                        raise
-
-        # pretend to be the original function
-        f = getattr(self.__alternatives[self.__start_index], name)
-        return wraps(f)(call_and_maybe_retry)
-
-
 class RetryWrapper(object):
     """Handle transient errors, with configurable backoff.
 
